# notetake

./: .gitignore  pyproject.toml
notetake/: __init__.py  cli.py  collections.py  collections_cli.py  dailies.py  utils.py
notetake/config/: config.yaml  markdown-to-pdf.yaml  metadata.yaml
notetake/inkscape-shortcuts/: config.py  main.py  normal.py
